# esp_sd_changer

./: .gitignore  README.md  sdkconfig  sdkconfig.old
example/: CMakeLists.txt  README.md
example/main/: CMakeLists.txt  Kconfig.projbuild  sd_card_example_main.c
include/: sd_changer.h
main/: CMakeLists.txt  idf_component.yml  sd_card_example_main.c  sd_changer.c  sd_changer.h
src/: sd_changer.c
